--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,7 @@ prophet==1.1.5
 plotly==5.22.0
 reportlab==4.0.9
 xlsxwriter==3.2.0
+numpy==1.24.3
+jsonschema==4.17.3
+pathlib==1.0.1
+shutil==1.0.0
