--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ prophet==1.1.2
 plotly==5.22.0
 reportlab==4.0.9
 xlsxwriter==3.2.0
-numpy==1.23.5
+numpy>=1.24.0
 jsonschema==4.17.3
 Cython==3.0.0
 altair<6,>=4.0
