--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 streamlit==1.38.0
 pandas>=1.4.0
-prophet==1.1.2
+prophet>=1.1.2
 plotly==5.22.0
 reportlab==4.0.9
 xlsxwriter==3.2.0
@@ -29,3 +29,4 @@ pytz>=2017.3
 openpyxl==3.1.2
 pip==25.1.1
 setuptools
+holidays>=0.14.0
