--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 streamlit==1.38.0
-pandas>=1.4.0
-prophet>=1.1.2
+pandas==1.3.5
+prophet==1.1.2
 plotly==5.22.0
 reportlab==4.0.9
 xlsxwriter==3.2.0
 numpy>=1.24.0
 jsonschema==4.17.3
-Cython
+Cython==3.0.0
 altair<6,>=4.0
 blinker<2,>=1.0.0
 cachetools<6,>=4.0
@@ -28,5 +28,4 @@ python-dateutil>=2.7.3
 pytz>=2017.3
 openpyxl==3.1.2
 pip==25.1.1
-setuptools
-holidays>=0.14.0
+setuptools>=58.0.0
