--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,11 @@
-streamlit==1.38.0
-pandas==1.3.5
-prophet==1.1.2
-plotly==5.22.0
-reportlab==4.0.9
-xlsxwriter==3.2.0
-numpy>=1.24.0
-jsonschema==4.17.3
-Cython==3.0.0
-altair<6,>=4.0
-blinker<2,>=1.0.0
-cachetools<6,>=4.0
-click<9,>=7.0
-packaging<25,>=20
-pillow<11,>=7.1.0
-protobuf<6,>=3.20
-pyarrow>=7.0
-requests<3,>=2.27
-rich<14,>=10.14.0
-tenacity<9,>=8.1.0
-toml<2,>=0.10.1
-typing-extensions<5,>=4.3.0
-gitpython!=3.1.19,<4,>=3.0.7
-pydeck<1,>=0.8.0b4
-tornado<7,>=6.0.3
-watchdog<5,>=2.1.5
-python-dateutil>=2.7.3
-pytz>=2017.3
-openpyxl==3.1.2
-pip==25.1.1
-setuptools>=58.0.0
+streamlit
+pandas
+prophet
+plotly
+reportlab
+xlsxwriter
+numpy
+jsonschema
+openpyxl
+python-dateutil
+pytz
